fix(backend): resolve IDE inspections — JSpecify nullability, Jackson asString, testcontainers DockerImageName, resource/dataflow cleanups